fixbug:head-z-index

--- a/components/headCom.module.scss
+++ b/components/headCom.module.scss
@@ -2,6 +2,7 @@
 .headcontainer {
   width: 100vw;
   position: fixed;
+  z-index: 30;
   height: 80px;
   top: 0;
   :global {
